# HUST-CS-homework

./: .gitattributes  .gitignore  package-lock.json  package.json
C/: Machine.c  sell.c
C/VS Code/: Machine.c  average.c  test.c  why.c
Navicat Premium 15/Navicat Premium 15/: libcc.dll.BAK  navicat.exe.BAK
VS Code/experimental-report_standalone/: Experimental_Report.aux  Experimental_Report.fdb_latexmk  Experimental_Report.out  Experimental_Report.tex  Experimental_Report.toc
VS Code/latex/: exam.tex
VS Code/try/: main.tex  text.c
VS_Code/cpp/collage_class/cpp_program_design/experiment/: .gitignore  CMakeLists.txt  README.md
VS_Code/cpp/collage_class/cpp_program_design/experiment/.github/: copilot-instructions.md
VS_Code/cpp/collage_class/cpp_program_design/experiment/include/: Executor.hpp
VS_Code/cpp/collage_class/cpp_program_design/experiment/src/: ExecutorImpl.cpp  ExecutorImpl.hpp
VS_Code/cpp/collage_class/cpp_program_design/experiment/src/cmder/: ActionGroup.cpp  ActionGroup.hpp  BusOrchestrator.hpp  CmderFactory.cpp  CmderFactory.hpp  CmderOrchestrator.hpp  Command.hpp  NormalOrchestrator.hpp  SportsCarOrchestrator.hpp
VS_Code/cpp/collage_class/cpp_program_design/experiment/src/core/: Direction.cpp  Direction.hpp  Point.cpp  Point.hpp  PoseHandler.cpp  PoseHandler.hpp  Singleton.hpp
VS_Code/cpp/collage_class/cpp_program_design/experiment/tests/: BusTest.cpp  ExecutorFastTest.cpp  ExecutorReverseFastTest.cpp  ExecutorReverseTest.cpp  ExecutorTest.cpp  ExecutorTurnRoundTest.cpp  SportsCarTest.cpp
VS_Code/latex/: debug.tex
python/: main.py
(+875 files in other folders)
